--- a/showme5/src/css/index.css
+++ b/showme5/src/css/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 15px;
   font-family: sans-serif;
   background: url("blackboard.jpg") no-repeat top center fixed;
 }
@@ -66,4 +66,10 @@ h4{
     p{
     	font-size: 11px;
     }
+}
+.w3-container {
+  padding:15px;
+}
+.password{
+  width:100%;
 }
