--- a/showme5/src/index.css
+++ b/showme5/src/index.css
@@ -35,8 +35,8 @@ div.power_controls {
 }
 
 .btn {
-  padding: 2px;
-  margin: 1px 0;
+  padding: 15px;
+  margin: 5px 0;
 }
 
 /*sign in*/
@@ -46,7 +46,7 @@ div.power_controls {
 	outline: none;
 	background-color: #ffffff;
     padding: 0.2em .7em .4em .7em;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .signInBtn:hover {
@@ -98,12 +98,13 @@ div.power_controls {
 }
 
 .w3-container{
-  /*padding:12px 20px;
-  margin: 15px 0;*/
+  padding:12px 20px;
+  margin: 15px 0;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align: center;
 }
 
 .w3-modal-content {
@@ -130,7 +131,7 @@ input[name=password] {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
-  width: 100%;
+  width: 250%;
   border: 0;
   margin: 15px 0;
   padding: 12px 20px;
@@ -173,6 +174,7 @@ input[name=email] {
 .w3-panel.w3-padding-16.w3-black.w3-card-2 {
   width: 65vw;
   border-radius: 2px;
+  margin-left:120px;
 }
 
 .submitBtn {
@@ -189,8 +191,8 @@ input[name=email] {
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 20px;
+    padding: 20px;
     overflow: hidden;
     background-color: #333;
     font-size: 34px;
@@ -203,9 +205,11 @@ li {
 li a {
     display: block;
     color: white;
-    text-align: center;
+    text-align: right;
     padding: 14px 16px;
     text-decoration: none;
+    margin-left: 1000px;
+    font-size:20px;
 }
 
 *{	margin:0;	padding:0; }
@@ -258,7 +262,13 @@ a {
 	font-size: 20pt;
 	padding-bottom: 10px;
 }
-
-/*.navButton {
-	padding-top: 0px;
-}*/
+.password {
+  width:100%;
+  padding:10px;
+}
+.Navbar{
+  padding-left: 20px;
+}
+.passwordinput{
+  width: 100%;
+}
